--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
 		"firebase": "^9.1.3",
+		"framer-motion": "^4.1.17",
 		"fuse.js": "^6.4.6",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.2",
